--- a/style.css
+++ b/style.css
@@ -8,23 +8,23 @@
     min-height: 100vh;
     width: 100%;
     background: linear-gradient(135deg, #71b7e6, #9b59b6);
-    padding: 40px 20px;
+    padding: 10px;
+}
+.todo-app{
+    background: #fff;
+    padding: 40px 30px 70px;
+    border-radius: 10px;
+    width: 100%;
+    max-width: 540px;
+    margin: 100px auto 20px;
+}
+.todo-app h2{
+    color: #002765;
     display: flex;
     align-items: center;
-    justify-content: center;
+    margin-bottom: 20px;
 }
-
-.title{
-    color: #fff;
-    font-weight: 600;
-    font-size: 2.25rem;
-    text-align: center;
-}
-.app-icon{
-    width: 25px;
-    height: 30px;
-    object-fit: cover;
-    border-radius: 8px;
-    vertical-align: middle;
+.todo-app h2 img{
+    width: 30px;
     margin-left: 10px;
 }
